RESOLVED FIXED131780
[iOS][WK2] Fix the DidCommitLoad initial scrolling position
https://bugs.webkit.org/show_bug.cgi?id=131780
Summary [iOS][WK2] Fix the DidCommitLoad initial scrolling position
Benjamin Poulain
Reported 2014-04-16 18:08:40 PDT
[iOS][WK2] Fix the DidCommitLoad initial scrolling position
Attachments
Patch (1.57 KB, patch)
2014-04-16 18:09 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2014-04-16 18:09:33 PDT
Jon Honeycutt
Comment 2 2014-04-16 20:19:36 PDT
Comment on attachment 229510 [details] Patch r=me
Benjamin Poulain
Comment 3 2014-04-16 20:29:11 PDT
Note You need to log in before you can comment on or make changes to this bug.