[iOS][WK2] Fix the DidCommitLoad initial scrolling position https://bugs.webkit.org/show_bug.cgi?id=131780

Patch by Benjamin Poulain <bpoulain@apple.com> on 2014-04-16
Reviewed by Jon Honeycutt.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _didCommitLayerTree:]):
That code is older than _obscuredInsets and used the contentInsets as a workaround.


Canonical link: https://commits.webkit.org/149846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167412 268f45cc-cd09-0410-ab3c-d52691b4dbfc